--- a/config_files/logstash-masker.conf
+++ b/config_files/logstash-masker.conf
@@ -4,7 +4,7 @@ input {
     topics => ["${MASKER_INPUT_TOPIC}"]
     security_protocol => "SSL"
     codec => json
-    ssl_truststore_location => "/home/ubuntu/kafka.client.truststore.jks"
+    ssl_truststore_location => "/home/ec2-user/kafka.client.truststore.jks"
     group_id => "${MASKER_CONSUMER_GROUP_ID}"
         consumer_threads => "${MASKER_CONSUMER_THREADS}"
     auto_offset_reset => "earliest"
@@ -31,7 +31,7 @@ output {
         topic_id => "${MASKER_OUTPUT_TOPIC}"
     security_protocol => "SSL"
     codec => json
-    ssl_truststore_location => "/home/ubuntu/kafka.client.truststore.jks"
+    ssl_truststore_location => "/home/ec2-user/kafka.client.truststore.jks"
     client_id => "maskerOutputKafka"
     compression_type => "snappy"
         linger_ms => 5
