--- a/config_files/logstash-es-sync.conf
+++ b/config_files/logstash-es-sync.conf
@@ -2,7 +2,7 @@ input {
   kafka{
     bootstrap_servers => "${ES_SYNC_INPUT_BROKERS}"
     security_protocol => "SSL"
-    ssl_truststore_location => "/home/ubuntu/kafka.client.truststore.jks"
+    ssl_truststore_location => "/home/ec2-user/kafka.client.truststore.jks"
     topics => ["${ES_SYNC_INPUT_TOPIC}"]
     group_id => "${ES_SYNC_CONSUMER_GROUP_ID}"
     consumer_threads => "${ES_SYNC_CONSUMER_THREADS}"
