--- a/config_files/logstash-masker.conf
+++ b/config_files/logstash-masker.conf
@@ -1,5 +1,6 @@
 input {
     kafka {
+        id => "masker-input"
         bootstrap_servers => "${MASKER_INPUT_BROKERS}"
     topics => ["${MASKER_INPUT_TOPIC}"]
     security_protocol => "SSL"
@@ -27,6 +28,7 @@ filter {
 }
 output {
     kafka {
+        id => "masker-output"
     bootstrap_servers => "${MASKER_OUTPUT_BROKERS}"
         topic_id => "${MASKER_OUTPUT_TOPIC}"
     security_protocol => "SSL"
