--- a/config_files/logstash-s3.conf
+++ b/config_files/logstash-s3.conf
@@ -1,5 +1,6 @@
 input {
   kafka{
+    id => "s3-sync-input"
     bootstrap_servers => "${S3_INPUT_BROKERS}"
     security_protocol => "SSL"
     ssl_truststore_location => "/home/ec2-user/kafka.client.truststore.jks"
@@ -16,8 +17,9 @@ input {
 
 output {
     s3{
+        id => "s3-sync-output"
         prefix => "%{+YYYY}/%{+MM}/%{+dd}"
-        size_file => 10000000
+        size_file => 100000000
         region => "${S3_REGION}"
         bucket => "${S3_BUCKET_NAME}"
     }
