--- a/config_files/logstash-es-sync.conf
+++ b/config_files/logstash-es-sync.conf
@@ -1,5 +1,6 @@
 input {
   kafka{
+    id => "es-sync-input"
     bootstrap_servers => "${ES_SYNC_INPUT_BROKERS}"
     security_protocol => "SSL"
     ssl_truststore_location => "/home/ec2-user/kafka.client.truststore.jks"
@@ -20,6 +21,7 @@ filter {
 }
 output {
   amazon_es {
+    id => "es-sync-output"
     hosts => ["${ES_DOMAIN_NAME}"]
     region => "${ES_REGION}"
     codec => "json"
