--- a/config_files/logstash-s3.conf
+++ b/config_files/logstash-s3.conf
@@ -3,7 +3,7 @@ input {
     id => "s3-sync-input"
     bootstrap_servers => "${S3_INPUT_BROKERS}"
     security_protocol => "SSL"
-    ssl_truststore_location => "/home/ec2-user/kafka.client.truststore.jks"
+    ssl_truststore_location => "/usr/share/logstash/kafka.client.truststore.jks"
     topics => ["${S3_INPUT_TOPIC}"]
     group_id => "${S3_CONSUMER_GROUP_ID}"
     consumer_threads => "${S3_CONSUMER_THREADS}"
