--- a/config_files/logstash-masker.conf
+++ b/config_files/logstash-masker.conf
@@ -5,7 +5,7 @@ input {
     topics => ["${MASKER_INPUT_TOPIC}"]
     security_protocol => "SSL"
     codec => json
-    ssl_truststore_location => "/home/ec2-user/kafka.client.truststore.jks"
+    ssl_truststore_location => "/usr/share/logstash/kafka.client.truststore.jks"
     group_id => "${MASKER_CONSUMER_GROUP_ID}"
         consumer_threads => "${MASKER_CONSUMER_THREADS}"
     auto_offset_reset => "earliest"
@@ -20,11 +20,6 @@ filter {
             "message", "([a-zA-Z0-9_.+-]{1,4})[a-zA-Z0-9_.+-]*@([a-zA-Z0-9-]+)\.[a-zA-Z0-9-.]*([a-zA-Z0-9-.]{3})|(live|test)_(__dev__)?[a-zA-Z0-9]*([a-zA-Z0-9-.]{3})|\(?([+][0-9]{1,2})?\)?(\(?\d{3}\)?)[\s.-]?\d{3}[\s.-]?\d{4}", "\1\4\8xxxxxx\3\6"
         ]
     }
-    # Needed ?
-    uuid {
-        target => "uuid"
-        overwrite => true
-    }
 }
 output {
     kafka {
@@ -33,7 +28,7 @@ output {
         topic_id => "${MASKER_OUTPUT_TOPIC}"
     security_protocol => "SSL"
     codec => json
-    ssl_truststore_location => "/home/ec2-user/kafka.client.truststore.jks"
+    ssl_truststore_location => "/usr/share/logstash/kafka.client.truststore.jks"
     client_id => "maskerOutputKafka"
     compression_type => "snappy"
         linger_ms => 5
